[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/RadioModule.glb" type="PackedScene" id=1]
[ext_resource path="res://components/Equipment/MicrophoneModule.gd" type="Script" id=2]
[ext_resource path="res://assets/voicelines/mate_voice_lines01.raw.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/Robtronika-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("OmniLight:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("OmniLight:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SphereShape" id=3]
radius = 5.0258

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="MicrophoneModule" type="Spatial"]
script = ExtResource( 2 )

[node name="RadioModule" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/default = SubResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.129087, -0.10237 )
light_color = Color( 0.956863, 0.0823529, 0.101961, 1 )
light_energy = 5.0
light_specular = 5.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
bus = "Mate"

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="InstructionLabel" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79873, 0 )
visible = false
pixel_size = 0.1
billboard = 2
alpha_cut = 1
text = "PRESS E"
font = SubResource( 4 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
